--- a/rush.css
+++ b/rush.css
@@ -1,3 +1,60 @@
+@media only screen and (max-width: 768px)
+{
+	#header-links {
+		display: none;
+	}
+
+	.dropdown {
+		position: relative;
+		display: inline-block;
+	}
+	
+	.dropbtn {
+		background-color: #8a845a;
+		color: white;
+		padding: 16px;
+		font-size: 16px;
+		border: none;
+		cursor: pointer;
+	}
+	
+	.dropdown-content {
+		display: none;
+		position: absolute;
+		background-color: white;
+		min-width: 160px;
+		box-shadow: 0px 8px 16px 0px black;
+		z-index: 1;
+	}
+	
+	.dropdown-content a {
+		color: black;
+		padding: 12px 16px;
+		display: block;
+	}
+	
+	.dropdown-content a:hover {
+		background-color: #ddd;
+	}
+	
+	.dropdown:hover .dropdown-content {
+		display: block;
+	}
+	
+	.dropdown:hover .dropbtn {
+		background-color: #776d49;
+	}
+	
+}
+
+@media only screen and (min-width: 768px)
+{
+	.dropdown {
+		position: relative;
+		display: none;
+	}
+}
+
 body {
 	background-color: cadetblue;
 	/* height: 100vh; */
@@ -19,7 +76,11 @@ a {
 	text-decoration: none;
 }
 
-#header, #footer {
+.row {
+	display: block;
+}
+
+#header{
 	height: 15vh;
 	width: 100%;
 	/* background-color: aliceblue; */
@@ -48,6 +109,11 @@ a {
 
 #footer {
 	border: 1px solid black;
+	margin-top: 15vh;
+	padding: 2%;
+	height: 15vh;
+	justify-content: center;
+	background-color: aliceblue;
 }
 
 #header-links {
@@ -56,6 +122,7 @@ a {
 	margin-top: 3%;
 	margin-left: 3%;
 	height: 5vh;
+	position: fixed;
 }
 
 #banner {
@@ -78,12 +145,19 @@ a {
 }
 
 .credits-section {
-	width: 15%;
+	/* width: 15%; */
 	font-size: small;
+	font-family: monospace;
 	color: #333;
 	padding: 2%;
-	margin-left: 10%;
+	/* margin-left: 10%; */
+	text-decoration: none;
+	list-style: none;
+	border: 1px solid black;
+	text-align: center;
 }
+
+
 
 .a-credits, .a-credits:visited {
 	text-decoration: none;
@@ -115,6 +189,5 @@ a {
 }
 
 #hero-icons {
-	background-color: green;
-	margin-left: 10%;
+	text-align: center;
 }
