--- a/rush.css
+++ b/rush.css
@@ -80,8 +80,10 @@ a:hover {
 a {
 	text-decoration: none;
 }
-.row {
-	display: block;
+
+#animation {
+	margin-top: 10vh;
+	margin-bottom: 10vh;
 }
 
 #header{
@@ -142,23 +144,27 @@ a {
 #header-links {
 	width: 100%;
 	height: auto;
+	margin-top: 1vh;
+	margin-right: 1.5rem;
 }
 
 .header-link {
 	padding: 1%;
-	width: auto;
+	width: 5rem;
 	border-radius: 10%;
 	color: #222;
-	margin-left: 2%;
-	height: auto;
-	margin-right: 2%;
+	margin-left: 1%;
+	height: 2.5em;
+	margin-right: 1em;
 	box-shadow: 2px 2px #333;
 	text-align: center;
+	font-weight: 500;
 }
 
 .header-link:hover {
 	box-shadow: 4px 4px #333;
-	padding: 3%;
+	/* padding: 1.2%; */
+	transform: scale(1.2);
 }
 
 .content {
